# awful_news_vibes

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api_types.rs  budget.rs  cluster.rs  compress.rs  fetch.rs  main.rs  models.rs  orchestrator.rs  out_models.rs  prompts.rs  render.rs  similarity.rs  viz_export.rs
