[package]
name = "awful_news_vibes"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
license = "MIT"
description = "Daily news meta-analysis pipeline with AI-powered clustering and D3 visualizations"
readme = "README.md"
homepage = "https://github.com/graves/awful_news_vibes"
repository = "https://github.com/graves/awful_news_vibes"
keywords = ["news", "ai", "analysis", "clustering", "visualization"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon = "1.10"
regex = "1"
urlencoding = "2"
itertools = "0.14"
hashbrown = "0.16"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
once_cell = "1"
chrono-tz = "0.10.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
url = "2.5"

# optional tighter token estimator
tiktoken-rs = "0.7.0"

# awful_aj for LLM orchestration
awful_aj = "0.3.9"  # Update to actual version from crates.io
